# PxEngine

./: CMakeLists.txt  README.md
assets/shaders/: triangle.frag  triangle.vert
sandbox/: main.cpp
src/assets/: ShaderLoader.cpp  ShaderLoader.h  TextureLoader.cpp  TextureLoader.h
src/core/: Engine.cpp  Engine.h  Logger.cpp  Logger.h
src/ecs/: Entity.h  Registry.h
src/platform/: Window.cpp  Window.h
src/renderer/: Mesh.cpp  Mesh.h  Renderer.cpp  Renderer.h  Shader.cpp  Shader.h  Texture.cpp  Texture.h
